# FilterPlatform

./: Configuration.py  app.py  pyproject.toml  requirements.txt  search_values.py  the_researchers_app.py
Templates/: Filters1.html  Filters2.html  Get_additinal_information.html  HomePage.html  loginPage.html  search_scans.html
