[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.0"
# Add other dependencies here

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
