[tool.poetry]
name = "filter-platform"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
gunicorn = "^20.1"
pandas = "^2.2.2"  # Add other dependencies as needed

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
flake8 = "^6.1.0"
black = "^23.12.1"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
